--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,15 +24,16 @@ parameters:
 
 jobs:
   # Define one or more jobs which will utilize your orb's commands and parameters to validate your changes.
-  integration-test-1:
+jobs:
+  pre-integration-checkout-workspace-job:
     docker:
       - image: cimg/base:stable
+    resource_class: small
     steps:
       - checkout
-      # "greet" is a sample command packaged with this orb config.
-      # This sample integration test will run as long as the greet command exists. Once you remove the greet command you should remove this line.
-      # Push new changes first, before adding new tests to your config.
-      - aws-ecr/greet
+      - persist_to_workspace:
+          root: .
+          paths: [sample/Dockerfile]
 
 workflows:
   # Prior to producing a development orb (which requires credentials) basic validation, linting, and even unit testing can be performed.
@@ -41,13 +42,8 @@ workflows:
     unless: << pipeline.parameters.run-integration-tests >>
     jobs:
       - orb-tools/lint # Lint Yaml files
-      - orb-tools/pack # Pack orb source
-      - shellcheck/check:
-          dir: ./src/scripts
-          exclude: SC2148
-      # optional: Run BATS tests against your scripts
-      - bats/run:
-          path: ./src/tests
+      - orb-tools/pack:
+          requires: [orb-tools/lint]
       # Publish development version(s) of the orb.
       - orb-tools/publish-dev:
           orb-name: amioranza/aws-ecr
@@ -55,8 +51,6 @@ workflows:
           requires:
             - orb-tools/lint
             - orb-tools/pack
-            - bats/run
-            - shellcheck/check
       # Trigger an integration workflow to test the
       # dev:${CIRCLE_SHA1:0:7} version of your orb
       - orb-tools/trigger-integration-tests-workflow:
