--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ workflows:
           requires: [orb-tools/lint]
 
       - orb-tools/publish-dev:
+          context: orb-publishing
           orb-name: amioranza/aws-ecr
           requires: [orb-tools/pack]
 
